<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:text="@string/dialog_game_over_title" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/dialog_game_over_coins" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/dialog_game_over_level" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center">
        <!--  
        <ImageView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/button_home"
	        android:contentDescription="@string/imageview"
	        android:onClick="navigateToMain"/>

	    <ImageView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/button_share"
	        android:contentDescription="@string/imageview"
	        android:onClick="shareScore"/>
        
	    <ImageView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/button_restart"
	        android:contentDescription="@string/imageview"
	        android:onClick="restartGame"/>
	    -->
    </LinearLayout>
    
</LinearLayout>
